# CogniRelay

./: .env.example  .gitignore  AGENTS.md  AI_PROTOCOL_NOTES.md  CHANGELOG.md  COGNIRELAY_ROADMAP.md  DESIGN_DOC.md  LICENSE  MANIFEST.in  README-PYPI.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh  server.json  setup.py  tools_hash_token.py
agent-assets/: README.md
app/: __init__.py  audit.py  auth.py  config.py  constants.py  context_contract.py  git_locking.py  git_manager.py  git_safety.py  indexer.py  lifecycle_warnings.py  main.py  models.py  storage.py  timestamps.py
app/context/: graph.py  (+2 more)
cognirelay/: __init__.py  __main__.py  cli.py
deploy/: GO_LIVE_RUNBOOK.md  PRODUCTION_SIGNOFF_CHECKLIST.md
docs/: _config.yml  agent-onboarding.md  api-surface.md  cognirelay-client.md  external-references.md  index.md  mcp-216-convergence-audit.md  mcp.md  payload-reference.md  reviewer-guide.md  system-overview.md
tests/: __init__.py  helpers.py  test_179_capabilities_v1.py  test_admin_bypass_audit_153.py  test_agent_assets_289.py  test_artifact_lifecycle_113.py  test_client_163.py  test_cognirelay_cli.py  test_config.py  test_context_graph_219_slice1.py  test_context_retrieval.py  test_context_retrieval_213_slice1.py  test_continuity_107_retention_policy.py  test_continuity_108_cold_storage.py  test_continuity_120_thread_identity.py  test_continuity_121_aggregate.py  test_continuity_121_integration.py  test_continuity_121_trust_signals.py  test_continuity_165_startup_view.py  test_continuity_167_session_end_snapshot.py  test_continuity_174_extraction_guards.py  test_continuity_176_lifecycle.py  test_continuity_176_normalization.py  test_continuity_176_patch.py  test_continuity_176_preserve.py  test_continuity_217_slice3_limits.py  test_continuity_33_phase1.py  test_continuity_33_phase2.py  test_continuity_33_phase3.py  test_continuity_97_locking.py  test_continuity_git_lock_durability.py  test_continuity_phase4_phase1.py  test_continuity_phase4_phase2.py  test_continuity_phase4_phase3.py  test_continuity_phase4_phase4.py  test_continuity_v1.py  test_continuity_v2_phase1.py  (+92 more)
(+129 files in other folders)
